[package]
name = "weather-ex"
version = "0.1.0"
authors = ["chuanshanjun <chuanshanjun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21" # 从命令行获取输入参数
exitfailure = "0.5.1" #  报错退出程序
serde = "1.0.114" # json解析
serde_json = "1.0.56" # json解析
serde_derive = "1.0.114" # json解析
reqwest = { version = "0.11", features = ["json"] } # web解析库
tokio = { version = "1", features = ["full"] } # 

 